K8s/kubeadm/tools/linkerd/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 44.194.21.200/32,68.201.66.56/32,192.30.252.0/22,185.199.108.0/22,140.82.112.0/20,143.55.64.0/20
  name: grafana
  namespace: linkerd-viz
spec:
  rules:
    - host: grafana.control.clickthebutton.click
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
